# dioxus-std

./: Cargo.toml
std/src/i18n/: use_i18n.rs
