[workspace]
resolver = "2"
members = [
    "std",
    "examples/*",
]

[workspace.dependencies]
dioxus-std = { path = "./std" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "53343bf" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", rev = "53343bf" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "53343bf" }
